Adding evaluation of proxy environment variables